ng2 routing screencast

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 	  <script src="https://jspm.io/system@0.16.js"></script>
     <script src="https://code.angularjs.org/2.0.0-alpha.35/angular2.dev.js"></script>
     <script src="https://code.angularjs.org/2.0.0-alpha.35/router.dev.js"></script>
+    <base href="/">
   </head>
   <body class="container">
     <app></app>
