--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,24 @@
 <html>
   <head>
+    <base href="/">
     <title>Angular 2 - ToDo App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    
+
     <script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
-	  <script src="https://jspm.io/system@0.16.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-alpha.35/angular2.dev.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-alpha.35/router.dev.js"></script>
-    <base href="/">
+	  <script src="http://cdnjs.cloudflare.com/ajax/libs/systemjs/0.18.4/system.src.js"></script>
+    <script>
+        //configure system loader
+        System.config({
+            defaultJSExtensions: true
+        });
+    </script>
+    <script src="https://code.angularjs.org/2.0.0-alpha.36/angular2.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-alpha.36/router.dev.js"></script>
+
   </head>
   <body class="container">
     <app></app>
-    <script>      
+    <script>
       System.import('app');
     </script>
   </body>
