--- a/app/index.html
+++ b/app/index.html
@@ -4,22 +4,23 @@
     <title>Angular 2 - ToDo App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-    <script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
-	  <script src="http://cdnjs.cloudflare.com/ajax/libs/systemjs/0.18.4/system.src.js"></script>
+    <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="../node_modules/systemjs/dist/system.src.js"></script>
+    <script src="../node_modules/rxjs/bundles/Rx.js"></script>
+    <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="../node_modules/angular2/bundles/router.dev.js"></script>
     <script>
         //configure system loader
         System.config({
             defaultJSExtensions: true
         });
+        
+        System.import('app')
+            .then(null, console.error.bind(console));
     </script>
-    <script src="https://code.angularjs.org/2.0.0-alpha.36/angular2.dev.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-alpha.36/router.dev.js"></script>
 
   </head>
   <body class="container">
     <app></app>
-    <script>
-      System.import('app');
-    </script>
   </body>
 </html>
