--- a/app/app.html
+++ b/app/app.html
@@ -1,9 +1,23 @@
+<nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">ng2 play</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li [class.active]="isActive('')"><a [routerLink]="['/Home']">Todo</a></li>
+                <li [class.active]="isActive('/about/Hello world')"><a [routerLink]="['/About', {'id': 'Hello world'}]">About</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <div class="container">
-    <nav>
-        <ul>
-            <li><a [routerLink]="['/Home']">Todo</a></li>
-            <li><a [routerLink]="['/About', {'id': 'Hello world'}]">About</a></li>
-        </ul>
-    </nav>
     <router-outlet></router-outlet>
 </div>
