--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       System.import('app/boot').then(null, console.error.bind(console));
     </script>
   </head>
-  <body class="container">
+  <body>
     <my-app>Loading...</my-app>
   </body>
 </html>
