Auth/Login and JWT with Auth0

--- a/app/app.html
+++ b/app/app.html
@@ -14,6 +14,11 @@
                 <li [class.active]="isActive('')"><a [routerLink]="['/Home']">Todo</a></li>
                 <li [class.active]="isActive('/about/Hello world')"><a [routerLink]="['/About', {'id': 'Hello world'}]">About</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li *ngIf="loggedIn()" [class.active]="isActive('/profile')"><a [routerLink]="['/Profile']">Profile</a></li>
+              <li><a href="#" *ngIf="!loggedIn()" (click)="login()">Login</a></li>
+              <li><a href="#" *ngIf="loggedIn()" (click)="logout()">Logout</a></li>
+            </ul>
         </div>
     </div>
 </nav>
