Angular 2 Material First Look

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         map: {
           "angular2-jwt": "node_modules/angular2-jwt/angular2-jwt",
           "angular2": "node_modules/angular2",
-          "rxjs": "node_modules/rxjs"
+          "rxjs": "node_modules/rxjs",
+          '@angular2-material/core': 'node_modules/@angular2-material/core/core',
+          '@angular2-material/checkbox': 'node_modules/@angular2-material/checkbox/checkbox',
+          '@angular2-material/button': 'node_modules/@angular2-material/button/button',
+          '@angular2-material/progress-circle': 'node_modules/@angular2-material/progress-circle/progress-circle'
         }
       });
       System.import('app/boot').then(null, console.error.bind(console));
