Screencast: Replacing bootstrap with materal2

--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,14 @@
-<nav class="navbar navbar-default navbar-static-top">
+<md-toolbar>
+  <i class="material-icons demo-toolbar-icon">menu</i>
+  <span>ng2 play</span>
+  <span class="demo-fill-remaining"></span>
+  <i class="material-icons">code</i>
+</md-toolbar>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+<!--<nav class="navbar navbar-default navbar-static-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -25,4 +35,4 @@
 
 <div class="container">
     <router-outlet></router-outlet>
-</div>
+</div>-->
