--- a/app/app.html
+++ b/app/app.html
@@ -1,38 +1,20 @@
 <md-toolbar>
   <i class="material-icons demo-toolbar-icon">menu</i>
-  <span>ng2 play</span>
+  <span>ng2 play</span> &nbsp;
+  <div>
+    <a [routerLink]="['/Home']">Todo</a> |
+    <a [routerLink]="['/About', {'id': 'Hello world'}]">About</a>
+  </div>
+
   <span class="demo-fill-remaining"></span>
-  <i class="material-icons">code</i>
+
+  <div>
+    <a *ngIf="loggedIn()" [routerLink]="['/Profile']">Profile</a>&nbsp;
+    <a href="#" *ngIf="!loggedIn()" (click)="login()">Login</a>
+    <a href="#" *ngIf="loggedIn()" (click)="logout()">Logout</a>
+  </div>  
 </md-toolbar>
 
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<!--<nav class="navbar navbar-default navbar-static-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">ng2 play</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li [class.active]="isActive('')"><a [routerLink]="['/Home']">Todo</a></li>
-                <li [class.active]="isActive('/about/Hello world')"><a [routerLink]="['/About', {'id': 'Hello world'}]">About</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li *ngIf="loggedIn()" [class.active]="isActive('/profile')"><a [routerLink]="['/Profile']">Profile</a></li>
-              <li><a href="#" *ngIf="!loggedIn()" (click)="login()">Login</a></li>
-              <li><a href="#" *ngIf="loggedIn()" (click)="logout()">Logout</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<div class="container">
-    <router-outlet></router-outlet>
-</div>-->
