--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
   <head>
     <base href="/">
     <title>Angular 2 - ToDo App</title>
-    <link rel="stylesheet" href="main.css">
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">    
+
+    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="//cdn.auth0.com/js/lock-8.1.min.js"></script>
+    
+    <script src="node_modules/es6-shim/es6-shim.js"></script>
+    <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script>
