--- a/app/app.html
+++ b/app/app.html
@@ -2,14 +2,14 @@
   <i class="material-icons demo-toolbar-icon">menu</i>
   <span>ng2 play</span> &nbsp;
   <div>
-    <a [routerLink]="['/Home']">Todo</a> |
-    <a [routerLink]="['/About', {'id': 'Hello world'}]">About</a>
+    <a [routerLink]="['/']">Todo</a> |
+    <a [routerLink]="['/about', 'Hello world']">About</a>
   </div>
 
   <span class="demo-fill-remaining"></span>
 
   <div>
-    <a *ngIf="loggedIn()" [routerLink]="['/Profile']">Profile</a>&nbsp;
+    <a *ngIf="loggedIn()" [routerLink]="['/profile']">Profile</a>&nbsp;
     <a href="#" *ngIf="!loggedIn()" (click)="login()">Login</a>
     <a href="#" *ngIf="loggedIn()" (click)="logout()">Logout</a>
   </div>  
