--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,16 @@
+<!doctype html>
 <html>
-
 <head>
   <meta charset="utf-8">
-
-  <title>Angular 2 - ToDo App</title>
-  <base href="/"> {{#unless environment.production}}
-  <script src="/ember-cli-live-reload.js" type="text/javascript"></script> {{/unless}}
+  <title>Ng2Play</title>
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <link href="main.css" rel="stylesheet">
-  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="//cdn.auth0.com/js/lock-8.1.min.js"></script>
 </head>
-
 <body>
   <app-root>Loading...</app-root>
-  {{#each scripts.polyfills}}
-  <script src="{{.}}"></script> {{/each}}
-  <script>
-    System.import('system-config.js').then(function () {
-      System.import('main');
-    }).catch(console.error.bind(console));
-  </script>
-
 </body>
-
 </html>
